# cloudflare-ai-mcp

./: .env.example  .gitignore  LICENSE  environment.yml  pyproject.toml  readme.md  readme_cn.md  requirements.txt
.streamlit/: secrets.example.toml
demo/: examples.py
src/cloudflare_ai/: __init__.py  server.py  testpypi.md
src/cloudflare_ai/tools/: __init__.py  generate_images.py  generate_prompt.py
src/cloudflare_ai/utils/: __init__.py  cloudflare.py
tests/: test_tools.py
